--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint",
     "prettier": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "16.0.1",
@@ -16,19 +18,31 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.2",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@storybook/addon-a11y": "^10.0.1",
+    "@storybook/addon-docs": "^10.0.1",
+    "@storybook/addon-vitest": "^10.0.1",
+    "@storybook/nextjs": "^10.0.1",
+    "@storybook/nextjs-vite": "^10.0.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser-playwright": "^4.0.5",
+    "@vitest/coverage-v8": "^4.0.5",
     "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "eslint-plugin-storybook": "^10.0.1",
     "husky": "^9.1.7",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
+    "storybook": "^10.0.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.5"
   },
   "engines": {
     "node": ">=18.0.0",
