--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
