--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.13.1",
+    "inversify": "^7.10.4",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
