--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
+    "better-sqlite3": "^12.4.1",
     "inversify": "^7.10.4",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
@@ -31,6 +33,7 @@
     "@storybook/nextjs": "^10.0.1",
     "@storybook/nextjs-vite": "^10.0.1",
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
