--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
     "better-sqlite3": "^12.4.1",
+    "cloudinary": "^2.8.0",
     "inversify": "^7.10.4",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
